@@ -6,6 +6,10 @@ However contributors are encouraged to add their own entries for their work.
 
 Since build 218:
 ----------------
+ * Conversions from a Python object to a variant now does a better job at
+   deciding what variant type to use, taking into account the size and sign of
+   the value (Stefan Schukat via patch #127)
+
  * Add support for VT_I8 and VT_UI8 when converting a variant into a Python
    object (Stefan Schukat via patch #128)
 
